--- a/stellenbosch_ee_report.tex
+++ b/stellenbosch_ee_report.tex
@@ -108,8 +108,7 @@
 \begin{document}
 
 % Front matter
-\input{frontmatter/skripsie_title_page}
-%\input{frontmatter/masters_title_page}
+\input{frontmatter/masters_title_page}
 \pagenumbering{roman}
 \input{frontmatter/acknowledgements}
 \input{frontmatter/declaration}
@@ -122,8 +121,10 @@
 \pagenumbering{arabic}
 
 % Contents
-\input{introduction/introduction}
-\input{conclusion/conclusion}
+\input{introduction/introduction.tex}
+\input{modelling/modelling.tex}
+\input{system_id/system_id.tex}
+\input{conclusion/conclusion.tex}
 
 % Bibliography
 \bibliography{mybib}
