--- a/stellenbosch_ee_report.tex
+++ b/stellenbosch_ee_report.tex
@@ -4,7 +4,7 @@
 \usepackage[left=2.5cm,right=2.5cm,top=2.5cm,bottom=2.5cm]{geometry}
 
 % Font and text
-\usepackage[afrikaans,english]{babel}
+\usepackage[british,afrikaans]{babel}
 \usepackage{microtype}
 \usepackage{setspace}
 \usepackage{lmodern}
@@ -103,7 +103,6 @@
 \patchcmd{\ttlh@hang}{\parindent\z@}{\parindent\z@\leavevmode}{}{}
 \patchcmd{\ttlh@hang}{\noindent}{}{}{}
 \makeatother
-
 
 \begin{document}
 
