Added imports section of CCA article

--- a/stellenbosch_ee_report.tex
+++ b/stellenbosch_ee_report.tex
@@ -104,6 +104,65 @@
 \patchcmd{\ttlh@hang}{\noindent}{}{}{}
 \makeatother
 
+% Include packages
+% Figures and graphics
+\usepackage{graphicx} % JPG, PNG, PDF images
+\usepackage{svg} % SVG images
+\graphicspath{ {images/} }
+\usepackage{float}
+\usepackage{subcaption}
+
+% Itemize modifications
+\usepackage{enumitem}
+
+% Math
+\usepackage{amsmath, mathtools, bm}
+\usepackage{mathrsfs}
+\usepackage{siunitx} % SI Units
+\usepackage{tabstackengine}
+\stackMath
+\newcolumntype{C}[1]{>{\centering\arraybackslash$}m{#1}<{$}}
+\newlength{\mycolwd} % array column width
+\settowidth{\mycolwd}{$\bm{x}_{w+q-1}$} % "width" of largest element in array
+
+% TikZ
+\usepackage{tikz}
+\usetikzlibrary{shapes, shadows, arrows, arrows.meta}
+\usetikzlibrary{fit}
+\usetikzlibrary{external}
+\tikzexternalize % activate!
+
+% Plots
+\usepackage{pgfplots} % plots
+\pgfplotsset{width=\columnwidth, compat=newest} % plot parameters
+\usepgfplotslibrary{units} % allows to enter the units nicely
+\usepgfplotslibrary{colorbrewer} % awesome colors
+
+% Color
+\usepackage{xcolor}
+\definecolor{light_blue}{RGB}{222,235,247}
+\definecolor{faded_red}{RGB}{203,24,29} % #CB181D
+
+% Glossary
+\usepackage[acronym, nomain, nopostdot, nonumberlist, nogroupskip, toc, automake=false]{glossaries}
+\loadglsentries{glossary}
+
+% Bibliography
+\usepackage{natbib}
+% \bibliographystyle{ifacconf.bst}
+\usepackage[hyphens]{url}
+
+% Editing
+\usepackage{xcolor}
+\newcommand{\jmurraylouw}[1]{\textcolor{blue}{#1}}
+\newcommand{\willem}[1]{\textcolor{red}{#1}}
+\usepackage{amssymb}
+\newcommand{\R}{\mathbb{R}}
+% \usepackage[prependcaption,textsize=tiny]{todonotes}
+% \setlength{\marginparwidth}{1.2cm}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 
 % Front matter
